Fix alignment and padding in main.css

--- a/css/main.css
+++ b/css/main.css
@@ -14,13 +14,13 @@ header {
   background-color: #e2e2e2;
   justify-content: space-between;
   margin: .5rem;
-  padding:.75em 1em .6em;
-  align-items: stretch;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 nav ul {
   width: 33.333%;
-  align-items: stretch;
+  align-items: center;
   padding: 1rem;
   display: flex;
   justify-content: space-around;
@@ -29,6 +29,7 @@ nav ul {
 img {
   sizing:1.5;
   width: 2rem;
+  order: -1;
 }
 
 nav:first-child {
@@ -44,4 +45,8 @@ color: #0074d9
 nav:last-child {
 color: #0074d9
 
+}
+
+a:hover {
+  color: #fff;
 }
